<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/closeContract"
        android:title="Закрыть договор"
        app:showAsAction="always"
        android:icon="@drawable/ic_close"/>

    <item
        android:id="@+id/payContract"
        android:title="Закрыть оплату"
        app:showAsAction="never" />
</menu>